--- a/packages/space/src/assets/styles/_profile.scss
+++ b/packages/space/src/assets/styles/_profile.scss
@@ -109,6 +109,7 @@
     border-radius: 50%;
     height: 100%;
     width: 100%;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.9);
   }
   dl span {
     display: flex;
